--- a/blog.html
+++ b/blog.html
@@ -77,14 +77,14 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Company
+                    <h2 class="intro-text text-center">Professional
                         <strong>blog</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/slide-1.jpg" alt="">
-                    <h2>Post Title
+                    <h2>Research
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/slide-2.jpg" alt="">
-                    <h2>Post Title
+                    <h2>Emergency Medical Services
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/slide-3.jpg" alt="">
-                    <h2>Post Title
+                    <h2>Residence Life
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
@@ -130,7 +130,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Siddacious 2016</p>
                 </div>
             </div>
         </div>
