--- a/about.html
+++ b/about.html
@@ -104,19 +104,19 @@
                     <hr>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="img/a.jpg" alt="">
                     <h3>Data Science
                         <small>Academic</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="img/b.jpg" alt="">
                     <h3>Travel
                         <small>Passion</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="img/c.jpg" alt="">
                     <h3>Sigma Beta Rho
                         <small>Social</small>
                     </h3>
