--- a/blog.html
+++ b/blog.html
@@ -88,7 +88,7 @@
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>After over a year of research proud to finally present our novel Cancer Prediction Webserver: Genopsis at NJIT's annual Innovation Day. Wrote a research proposal based on bioinformatics that was selected for a presentation round and then awarded funding. Project consists of JavaScript and Python scripting as well as algorithmic development and implementation </p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
@@ -98,7 +98,7 @@
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>Conducted a Medical Mission in Carteret, NJ to provide basic life support services for a local concert sponsored by the township. Our services were utilized throughout the day of operation for cooling and monitoring for any illnesses. It was a great opportunity to reach out towards the community and participate in the event. </p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
@@ -108,7 +108,7 @@
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>The residence life department at NJIT hosted their annual highlander games, a campus competition that encourages the development and friendly challenges between teams. As a resident assistant on campus I was in charge of staffing the event with my fellow collegues and also served as judge for a few of the games. It gave me a chance to express my responsibilities and adapt to the various roles needed throughout the event.</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
