--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="img/a.jpg" alt="">
                 </div>
                 <div class="col-md-6">
                     <p>Basically a snapshot into my life and experience.</p>
@@ -104,7 +104,7 @@
                     <hr>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="img/a.jpg" alt="">
+                    <img class="img-responsive" src="img/slide-1.jpg" alt="">
                     <h3>Data Science
                         <small>Academic</small>
                     </h3>
